--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 baseURL = "/"
-title = "Twenty Twenty Hugo for Forestry"
+title = "Coumba Khonte"
 languageName = "En"
 languageCode = "en-us"
 
